2016-06-06 Michele Pinamonti <michele.pinamonti@gmail.com>, Thomas Calvet <calvet@cppm.in2p3.fr>
        * Partial fix of weight systemtics on smmothed samples
        * Option to add random initial values for the NP (usefull to help Asimov converging): use flag "SetRandomInitialNPval:" (e.g. set it to 0.1) 
        
2016-05-27 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Printout missing histogram (thanks t Davide Gerbaudo)
        * KeepPruning flag in config file (allows to read Pruning.root file not to read already pruned systematics)
        
2016-05-18 Thomas Calvet <calvet@cppm.in2p3.fr>
        * Adding functionality to do correlation plot
	* Small bug fix for NTuple reading
	* Bug fix for SystDataPlots option
        
2016-05-11 Michele Pinamonti <michele.pinamonti@gmail.com>, Valerio Dao <valerio.dao@cern.ch>
        * Pruning functionality fixed
        
2016-05-09 Michele Pinamonti <michele.pinamonti@gmail.com>, Valerio Dao <valerio.dao@cern.ch>
        * Pruning functionality (and plot) improved

2016-05-06 Michele Pinamonti <michele.pinamonti@gmail.com>, Valerio Dao <valerio.dao@cern.ch>
        * Systematic decorrelation options added (still to document)
        * Bug fix for running from histograms
        * Option added to run on an externally produced workspace (need to specify "WorkspaceFileName" in the config)
        
2016-04-29 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Functionality added to re-run smoothing after input histograms are created (new option "b")
        * Empty bin warnings now on only in debug mode
        
2016-04-26 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fixed auto-binning for histo inputs (thanks Ian)
        * Generation of Asimov within the fitter skipped if no data in any region (i.e. skipping DumpData method)
        
2016-04-15 Michele Pinamonti <michele.pinamonti@gmail.com>