@@ -14,9 +14,9 @@ Job: "ttH2015"
 %   LumiScale: 10    % use this to scale `on the fly' (i.e. after option "n" or "h") MC samples - e.g. for fast projections
   Selection: "trigger>0 && (e_jets || mu_jets)"
 %   PlotOptions: "YIELDS"
-  PlotOptions: "NOSIG,OVERSIG"
+%   PlotOptions: "NOSIG,OVERSIG"
   NtupleName: "nominal"
-  DebugLevel: 1
+  DebugLevel: 0
   MCstatThreshold: 0.01
   SystControlPlots: TRUE
   SystPruningShape: 0.01
@@ -40,7 +40,7 @@ Fit: "fit"
 %   FitBlind: TRUE
 %   doLHscan: "ttXsec"
   FitBlind: TRUE
-  POIAsimov: 1
+  POIAsimov: 0
   UseMinos: SigXsecOverSM
 
 % --------------- %
@@ -65,7 +65,7 @@ Region: "HThad_4j2b"
   NtuplePathSuff: "4j2b"
   Binning: 100,200,250,300,350,400,450,500,550,600,700,1100
   BinWidth: 50
-  DataType: ASIMOV
+%   DataType: ASIMOV
   
 Region: "HThad_5j3b"
   Type: CONTROL
@@ -76,7 +76,7 @@ Region: "HThad_5j3b"
   NtuplePathSuff: "5j3b"
   Binning: 100,200,300,400,500,600,1000,1600
   BinWidth: 100
-  DataType: ASIMOV
+%   DataType: ASIMOV
   
 Region: "HThad_ge6jge4b"
   Type: SIGNAL
@@ -87,7 +87,8 @@ Region: "HThad_ge6jge4b"
   NtuplePathSuff: "ge6jge4b"
   Binning: 100,400,700,1600
   BinWidth: 300
-  DataType: ASIMOV
+%   Binning: "AutoBin","TransfoD",3,3
+%   DataType: ASIMOV
 
 % --------------- %
 % --- SAMPLES --- %
@@ -157,7 +158,7 @@ Sample: "ttbar"
   
 NormFactor: "SigXsecOverSM"
   Title: "#mu_{t#bar{t}H}"
-  Nominal: 0
+  Nominal: 1
   Min: -10
   Max: 10
   Samples: ttH
