@@ -55,7 +55,12 @@ void FitExample(string opt="h",string configFile="util/myFit.config",string opti
         }
         //
         if(myMultiFit->fCompare){
-            if(myMultiFit->fComparePulls)  myMultiFit->ComparePulls();
+//             if(myMultiFit->fComparePulls)  myMultiFit->ComparePulls();
+            if(myMultiFit->fComparePulls){
+                for(unsigned int i_cat=0;i_cat<myMultiFit->fNPCategories.size();i_cat++){
+                    myMultiFit->ComparePulls(myMultiFit->fNPCategories[i_cat]);
+                }
+            }
             if(myMultiFit->fComparePOI)    myMultiFit->ComparePOI(myMultiFit->fPOI);
             if(myMultiFit->fCompareLimits) myMultiFit->CompareLimit();
         }
